[package]
name = "random-team"
version = "0.1.0"
authors = ["Morgana <xly_tk@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-rt = "2"
actix-web-actors = "4.0.0-beta.6"
actix = "0.12"
actix-http = "3.0.0-beta.8"
actix-cors = "0.6.0-beta.2"
serde_json = "1"
serde = { version = "1.0.114", features = ["derive"] }
fern = "0.6"
chrono = { version = "0.4", features = ["serde"]}
rand = "0.8"
tokio = {version = "1", features = ["full"]}
log = "0.4"
reqwest = {version = "0.11", features = ["json"]}